# src/application/services/api/config/swagger.json
@@ -384,6 +384,23 @@
       "CustomerCartItemsUpdateOrCreateBodySchema": {
         "type": "object",
         "properties": {
+          "locale": {
+            "type": "string",
+            "description": "Cart locale"
+          },
+          "eventDate": {
+            "type": "string",
+            "format": "date-time",
+            "description": "Cart event date"
+          },
+          "phoneContact": {
+            "type": "string",
+            "description": "Cart phone contact"
+          },
+          "observation": {
+            "type": "string",
+            "description": "Cart observation"
+          },
           "cheffId": {
             "type": "number",
             "description": "Cheff id"
@@ -412,7 +429,9 @@
             "bearerAuth": []
           }
         ],
-        "tags": ["Admin"],
+        "tags": [
+          "Admin"
+        ],
         "responses": {
           "200": {
             "description": "All pending cheffs",
@@ -438,7 +457,9 @@
             "bearerAuth": []
           }
         ],
-        "tags": ["Admin"],
+        "tags": [
+          "Admin"
+        ],
         "responses": {
           "200": {
             "description": "All approved cheffs",
@@ -464,14 +485,18 @@
             "bearerAuth": []
           }
         ],
-        "tags": ["Admin"],
+        "tags": [
+          "Admin"
+        ],
         "parameters": [
           {
             "id": null,
-            "name": "Cheff id",
+            "name": "id",
             "in": "path",
             "required": true,
-            "type": "number"
+            "schema": {
+              "type": "integer"
+            }
           }
         ],
         "responses": {
@@ -495,14 +520,18 @@
             "bearerAuth": []
           }
         ],
-        "tags": ["Admin"],
+        "tags": [
+          "Admin"
+        ],
         "parameters": [
           {
             "id": null,
-            "name": "Cheff id",
+            "name": "id",
             "in": "path",
             "required": true,
-            "type": "number"
+            "schema": {
+              "type": "integer"
+            }
           }
         ],
         "requestBody": {
@@ -530,7 +559,9 @@
     "/admin/sign-in": {
       "post": {
         "description": "Sign in as admin",
-        "tags": ["Admin"],
+        "tags": [
+          "Admin"
+        ],
         "requestBody": {
           "content": {
             "application/json": {
@@ -575,7 +606,9 @@
             "bearerAuth": []
           }
         ],
-        "tags": ["Admin"],
+        "tags": [
+          "Admin"
+        ],
         "responses": {
           "200": {
             "description": "Authenticated as admin",
@@ -611,7 +644,9 @@
             "bearerAuth": []
           }
         ],
-        "tags": ["Cheff"],
+        "tags": [
+          "Cheff"
+        ],
         "responses": {
           "200": {
             "description": "All carts with cheff food plates",
@@ -637,7 +672,9 @@
             "bearerAuth": []
           }
         ],
-        "tags": ["Cheff"],
+        "tags": [
+          "Cheff"
+        ],
         "responses": {
           "200": {
             "description": "All carts with cheff food plates sent",
@@ -663,14 +700,18 @@
             "bearerAuth": []
           }
         ],
-        "tags": ["Cheff"],
+        "tags": [
+          "Cheff"
+        ],
         "parameters": [
           {
             "id": null,
-            "name": "Cart id",
+            "name": "id",
             "in": "path",
             "required": true,
-            "type": "number"
+            "schema": {
+              "type": "integer"
+            }
           }
         ],
         "responses": {
@@ -701,7 +742,9 @@
             "bearerAuth": []
           }
         ],
-        "tags": ["Cheff"],
+        "tags": [
+          "Cheff"
+        ],
         "responses": {
           "200": {
             "description": "Cart refused",
@@ -730,7 +773,9 @@
             "bearerAuth": []
           }
         ],
-        "tags": ["Cheff"],
+        "tags": [
+          "Cheff"
+        ],
         "requestBody": {
           "content": {
             "application/json": {
@@ -752,7 +797,9 @@
     },
     "/cheffs/request-registration": {
       "post": {
-        "tags": ["Cheff"],
+        "tags": [
+          "Cheff"
+        ],
         "requestBody": {
           "content": {
             "application/json": {
@@ -775,7 +822,9 @@
     "/cheffs/sign-in": {
       "post": {
         "description": "Sign in as cheff",
-        "tags": ["Cheff"],
+        "tags": [
+          "Cheff"
+        ],
         "requestBody": {
           "content": {
             "application/json": {
@@ -803,7 +852,9 @@
             "bearerAuth": []
           }
         ],
-        "tags": ["Cheff"],
+        "tags": [
+          "Cheff"
+        ],
         "responses": {
           "200": {
             "description": "Authenticated as cheff",
@@ -839,14 +890,19 @@
             "bearerAuth": []
           }
         ],
-        "tags": ["Customer"],
+        "tags": [
+          "Customer"
+        ],
         "parameters": [
           {
             "id": null,
-            "name": "Food plate id",
+            "name": "id",
             "in": "path",
             "required": true,
-            "type": "number"
+            "description": "Food plate id",
+            "schema": {
+              "type": "integer"
+            }
           }
         ],
         "requestBody": {
@@ -887,7 +943,9 @@
             "bearerAuth": []
           }
         ],
-        "tags": ["Customer"],
+        "tags": [
+          "Customer"
+        ],
         "responses": {
           "200": {
             "description": "Cheffs found",
@@ -911,14 +969,19 @@
             "bearerAuth": []
           }
         ],
-        "tags": ["Customer"],
+        "tags": [
+          "Customer"
+        ],
         "parameters": [
           {
             "id": null,
+            "name": "id",
             "description": "Cheff id",
             "in": "path",
             "required": true,
-            "type": "number"
+            "schema": {
+              "type": "integer"
+            }
           }
         ],
         "responses": {
@@ -941,7 +1004,9 @@
     "/customers/sign-up": {
       "post": {
         "description": "Sign up as customer",
-        "tags": ["Customer"],
+        "tags": [
+          "Customer"
+        ],
         "requestBody": {
           "content": {
             "application/json": {
@@ -964,7 +1029,9 @@
     "/customers/sign-in": {
       "post": {
         "description": "Sign in as customer",
-        "tags": ["Customer"],
+        "tags": [
+          "Customer"
+        ],
         "requestBody": {
           "content": {
             "application/json": {
@@ -1009,7 +1076,9 @@
             "bearerAuth": []
           }
         ],
-        "tags": ["Customer"],
+        "tags": [
+          "Customer"
+        ],
         "responses": {
           "200": {
             "description": "Authenticated as customer",
@@ -1031,7 +1100,9 @@
     "/": {
       "get": {
         "description": "GoCheff API",
-        "tags": ["Config"],
+        "tags": [
+          "Config"
+        ],
         "responses": {
           "200": {
             "description": "Returns a message with the API name"
